--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <title>David McLaughlin Portfolio</title>
 
 
@@ -16,11 +16,11 @@
 
 </head>
 
-<body background="../images/concrete_seamless.png">
+<body background="images/concrete_seamless.png">
 
 
-    <div class="container-fluid m-0 p-0">
-        <nav class="navbar navbar-expand-sm bg-light p-0 border-bottom border-secondary">
+    <div class="container ml-30px p-0">
+        <nav class="navbar navbar-expand-md bg-light p-0 border-bottom border-secondary">
 
 
 
@@ -70,7 +70,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="form_name">Firstname *</label>
-                                <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *"
+                                <input id="form_name" type="text" name="name" class="form-control" placeholder="firstname *"
                                     required="required" data-error="Firstname is required.">
                                 <div class="help-block with-errors"></div>
                             </div>
@@ -78,7 +78,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="form_lastname">Lastname *</label>
-                                <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *"
+                                <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="lastname *"
                                     required="required" data-error="Lastname is required.">
                                 <div class="help-block with-errors"></div>
                             </div>
@@ -88,7 +88,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="form_email">Email *</label>
-                                <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *"
+                                <input id="form_email" type="email" name="email" class="form-control" placeholder="email *"
                                     required="required" data-error="Valid email is required.">
                                 <div class="help-block with-errors"></div>
                             </div>
@@ -96,7 +96,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="form_phone">Phone</label>
-                                <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Please enter your phone">
+                                <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="phone">
                                 <div class="help-block with-errors"></div>
                             </div>
                         </div>
@@ -114,7 +114,7 @@
                             <input type="submit" class="btn btn-success btn-send" value="Send message">
                         </div>
                     </div>
-                    
+
                 </div>
 
             </form>
@@ -125,12 +125,11 @@
 
     </div>
     <div class="row">
-        <br>
-        <br>
-        <br>
+        <br><br><br><br><br><br><br>
+
     </div>
 
-    <footer class="container-fluid bg-secondary text-dark text-center border border-border-info" style="padding 20px;">
+    <footer class="container bg-secondary text-dark text-center border border-border-info" style="padding 20px;">
 
         <p>Copyright &COPY;</p>
 
