--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <title>David McLaughlin Portfolio</title>
 
 
@@ -16,10 +16,10 @@
 
 </head>
 
-<body background="../images/concrete_seamless.png">
+<body background="images/concrete_seamless.png">
 
 
-    <div class="container-fluid m-0 p-0">
+    <div class="container ml30-0 p-0">
         <nav class="navbar navbar-expand-sm bg-light p-0 border-bottom border-secondary">
 
 
@@ -67,18 +67,27 @@
 
 
 
-            <div class="col-md-2 m-2 layout1">
+            <div class="col-md-1 m-2 layout1">
 
+                <div class="img1">
+                    <div class="labelhtml">HTML</div>
+                </div>
+                <div class="img2">
+                    <div class="labelcss">CSS</div>
+                </div>
+                <div class="img3">
+                    <div class="labelbootstrap">Bootstrap</div>
+                </div>
 
-                <div><img class="img-responsivve" src="../images/image (6).jpeg" alt="HTML" height="120px" width="150px"></div><br>
-                <div><img class="img-responsive" src="../images/image (5).jpeg" alt="css" height="120px" width="150px"></div><br>
-                <div><img class="img-responsive" src="../images/image (7).jpeg" alt="JavaScript" height="120px" width="150px"></div><br>
 
             </div>
-
             <div class="col-md-2 m-2 layout2">
-                <div><img class="img-responsive" src="../images/images (4).jpeg" alt="bootstrap" height="120px" width="150px"></div><br>
-                <div><img class="img-responsive" src="../images/image1.jpeg" alt="jQuery" height="120px" width="150px"></div>
+                <div class="img4">
+                    <div class="labeljavascript">JavaScript</div>
+                </div>
+                <div class="img5">
+                    <div class="labelgithub">GitHub</div>
+                </div>
 
             </div>
 
@@ -86,12 +95,11 @@
     </div>
 
     <div class="row">
-        <br>
-        <br>
-        <br>
+        <br><br><br><br><br><br>
+
     </div>
 
-    <footer class="container-fluid bg-secondary text-dark text-center border border-border-info" style="padding 20px;">
+    <footer class="container bg-secondary text-dark text-center border border-border-info" style="padding 20px;">
 
         <p>Copyright &COPY;</p>
 
